# Academic-Slides-Agent

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  NOTICE  README.md  README.zh-CN.md  README.zh.md  pyproject.toml  start-dev.bat
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/asa_api/: __init__.py  __main__.py  app.py  server.py
apps/api/tests/: test_api.py  test_server.py
apps/cli/: pyproject.toml
apps/cli/asa_cli/: __init__.py  __main__.py  driver.py
apps/cli/tests/: test_cli.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.tsx  api.ts  follow.ts  store.ts  styles.css
apps/web/src/components/: ApprovalView.tsx  GenerateView.tsx  Lightbox.tsx  ResultView.tsx  Sidebar.tsx
docs/: SPEC.md
openspec/: config.yaml
openspec/changes/2026-06-17-add-handoff-ingestion/: proposal.md  tasks.md
openspec/changes/2026-06-22-uv-workspace-install/: design.md  tasks.md
openspec/changes/2026-06-22-uv-workspace-install/specs/packaging/: spec.md
openspec/changes/add-diagram-block/: proposal.md  tasks.md
openspec/changes/add-diagram-block/specs/outline-agent/: spec.md
openspec/changes/add-diagram-block/specs/pptx-compiler/: spec.md
openspec/changes/add-slide-ir/: design.md  tasks.md
openspec/changes/add-visual-canvas/specs/outline-agent/: spec.md
openspec/changes/archive/2026-06-03-add-api-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-critic-loop/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-formula-rendering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-frontend/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-ingestion/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-langgraph-orchestration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-llm-providers/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-outline-agent/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-pptx-compiler/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-provider-profiles/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-server-entrypoint/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-slide-ir/: proposal.md  tasks.md
openspec/changes/archive/2026-06-03-improve-output-quality/: proposal.md  tasks.md
openspec/changes/archive/2026-06-04-add-data-charts/: proposal.md  tasks.md
openspec/changes/archive/2026-06-04-add-detailed-slide-content/: proposal.md  tasks.md
openspec/changes/archive/2026-06-04-add-figure-extraction/: proposal.md  tasks.md
openspec/changes/archive/2026-06-04-add-ir-boundary-retry/: proposal.md  tasks.md
openspec/changes/archive/2026-06-04-add-mineru-parser/: proposal.md  tasks.md
openspec/changes/archive/2026-06-04-add-parallel-progress/: proposal.md  tasks.md
openspec/changes/archive/2026-06-04-improve-figure-layout/: proposal.md  tasks.md
openspec/changes/archive/2026-06-05-add-supplementary-inputs/: proposal.md  tasks.md
openspec/changes/archive/2026-06-06-add-overflow-fit/: proposal.md  tasks.md
openspec/changes/archive/2026-06-06-add-parse-cache/: proposal.md  tasks.md
openspec/changes/archive/2026-06-06-add-parser-resilience/: proposal.md  tasks.md
openspec/changes/archive/2026-06-06-add-style-profiles/: proposal.md  tasks.md
openspec/changes/archive/2026-06-06-add-title-color-scaffold/: proposal.md  tasks.md
openspec/changes/archive/2026-06-06-enhance-batch1/: proposal.md  tasks.md
openspec/changes/archive/2026-06-06-enhance-batch2-incremental-retry/: proposal.md  tasks.md
openspec/changes/archive/2026-06-06-enhance-batch3-formula/: proposal.md  tasks.md
openspec/changes/archive/2026-06-08-add-figure-panel-split/: proposal.md  tasks.md
openspec/changes/archive/2026-06-08-add-native-formula/: proposal.md  tasks.md
openspec/changes/archive/2026-06-08-dedup-and-fix-layout/: proposal.md  tasks.md
openspec/changes/archive/2026-06-08-improve-figure-text-balance/: proposal.md  tasks.md
openspec/changes/archive/2026-06-08-remove-mimo-profile/: proposal.md  tasks.md
openspec/changes/archive/2026-06-08-speed-up-generation/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-add-quality-loop/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-add-visual-canvas/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-durable-resume/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-enrich-content-blocks/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-layout-v2-theme-and-data-graphics/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-p1-structure-variety-detail/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-p2-icons-and-template-import/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-premium-default-and-layout-engine/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-rewrite-web-ui-visual-approval/: tasks.md
openspec/changes/archive/2026-06-10-theme-v2-and-gate-round2/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-unleash-model-expression/: proposal.md  tasks.md
openspec/changes/archive/2026-06-17-add-handoff-ingestion/: design.md
openspec/changes/archive/2026-06-22-uv-workspace-install/: proposal.md
openspec/changes/rewrite-web-ui-visual-approval/: proposal.md
openspec/specs/api/: spec.md
openspec/specs/critic/: spec.md
openspec/specs/figure-extraction/: spec.md
openspec/specs/formula-rendering/: spec.md
openspec/specs/ingestion/: spec.md
openspec/specs/llm-providers/: spec.md
openspec/specs/orchestration/: spec.md
openspec/specs/outline-agent/: spec.md
openspec/specs/packaging/: spec.md
openspec/specs/pptx-compiler/: spec.md
openspec/specs/provider-config/: spec.md
openspec/specs/server/: spec.md
openspec/specs/slide-ir/: spec.md
openspec/specs/web-ui/: spec.md
scripts/: license_scan.py
(+92 files in other folders)
