[project]
name = "asa-api"
version = "0.1.0"
description = "FastAPI service for Academic-Slides-Agent (jobs, SSE streaming, Hard-Stop resume)."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = ["fastapi>=0.110", "uvicorn>=0.30", "python-dotenv>=1.0", "python-multipart>=0.0.9", "asa-agents", "asa-ingestion", "asa-slide-ir", "asa-formula", "asa-providers"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv.sources]
asa-slide-ir = { path = "../../packages/core/ir", editable = true }
asa-agents = { path = "../../packages/agents", editable = true }
asa-ingestion = { path = "../../packages/ingestion", editable = true }
asa-formula = { path = "../../packages/core/formula", editable = true }
asa-providers = { path = "../../packages/providers", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asa_api"]
