[project]
name = "asa-api"
version = "0.1.0"
description = "FastAPI service for Academic-Slides-Agent (jobs, SSE streaming, Hard-Stop resume)."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = ["fastapi>=0.110", "uvicorn>=0.30", "python-dotenv>=1.0", "python-multipart>=0.0.9", "langgraph-checkpoint-sqlite>=2", "asa-agents", "asa-pptx-compiler", "asa-ingestion", "asa-slide-ir", "asa-formula", "asa-providers"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asa_api"]
