[project]
name = "asa-cli"
version = "0.1.0"
description = "Headless CLI for Academic-Slides-Agent (Lectern): handoff/PDF -> .pptx, no server."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = ["python-dotenv>=1.0", "langgraph-checkpoint-sqlite>=2", "asa-agents", "asa-ingestion", "asa-slide-ir", "asa-formula", "asa-providers"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lectern = "asa_cli.__main__:main"

[tool.uv.sources]
asa-slide-ir = { path = "../../packages/core/ir", editable = true }
asa-agents = { path = "../../packages/agents", editable = true }
asa-ingestion = { path = "../../packages/ingestion", editable = true }
asa-formula = { path = "../../packages/core/formula", editable = true }
asa-providers = { path = "../../packages/providers", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asa_cli"]
